<resources>
    <string name="app_name">TBCApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- string di activity_main -->
    <string name="welcome">Selamat Datang</string>
    <string name="tbapp">TB App</string>
    <string name="spasial">Pemetaan Spasial Temporal</string>
    <string name="lihat_pemetaan">Lihat Tingkat Kerawanan TBC</string>
    <string name="lihat_info">Lihat Selengkapnya</string>
    <string name="infotbc">Informasi Tuberkulosis</string>
    <string name="alamat_rs">Alamat Rumah Sakit</string>

    <!-- string di activity_info-->
    <string name="pu_deskripsi">Membahas tentang apa itu TBC</string>
    <string name="gj_deskripsi">Membahas tentang gejala yang dialami pasien</string>
    <string name="info_pb">Pengobatan</string>
    <string name="pb_deskripsi">Membahas tentang pengobatan TBC</string>
    <string name="info_pc">Pencegahan</string>
    <string name="pc_deskripsi">Membahas tentang pencegahan yang dapat dilakukan</string>
    <string name="info_data">Data</string>
    <string name="data_deskripsi">Menampilkan data - data seperti jumlah faskes, jumlah kasus TBC, rumah tidak sehat, kepadatan penduduk</string>

    <!-- string di layout info-->
    <string name="pengenalan">Informasi TBC</string>
    <string name="pu">Pengenalan Umum</string>
    <string name="penularan">Cara Penularan</string>
    <string name="kelompok_rentan">Kelompok Rentan</string>
    <string name="pencegahan">Pencegahan TBC</string>
    <string name="gejala">Gejala TBC</string>
    <string name="pengobatan">Pengobatan TBC</string>
    <string name="data">Data Tiap Kecamatan</string>

    <!-- string di layout dat-->
    <string name="jml">*jml = Jumlah</string>
    <string name="ts">*TS = Tidak Sehat</string>
    <string name="kep">*KP = Kepadatan Penduduk</string>
    <string name="kc">Kecamatan</string>
    <string name="faskes">Jml Faskes</string>
    <string name="rumahts">Rumah TS</string>
    <string name="kp">KP</string>

    <!-- string pilihan menu di app bar untuk pemetaan-->
    <string name="pilih_thn">Pilih Tahun</string>
    <string name="thn_2016">2016</string>
    <string name="thn_2017">2017</string>
    <string name="thn_2018">2018</string>
    <string name="thn_2019">2019</string>

    <!-- token mapbox-->
    <string name="mapbox_access_token">pk.eyJ1IjoiZ2FsdWhuciIsImEiOiJja29rN3Z4a3AxYmFnMnZwbjlheTYxN2JnIn0.-KjbP8ripXwFiudHu3gB9A</string>

</resources>