<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tbapp"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/sby"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/bg_pemetaan" />

            <TextView
                android:id="@+id/pemetaan"
                android:layout_width="125dp"
                android:layout_height="44dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:contextClickable="true"
                android:text="@string/spasial"
                android:textColor="#243C60"
                android:textSize="16sp" />

            <TextView
                android:onClick="infoMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="80dp"
                android:contextClickable="true"
                android:text="@string/lihat_pemetaan"
                android:textColor="#243C60"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@drawable/bg_info" />

            <TextView
                android:id="@+id/info"
                android:layout_width="125dp"
                android:layout_height="44dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:contextClickable="true"
                android:text="@string/infotbc"
                android:textColor="#243C60"
                android:textSize="16sp" />

            <TextView
                android:onClick="infoTBC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="80dp"
                android:contextClickable="true"
                android:text="@string/lihat_info"
                android:textColor="#243C60"
                android:textSize="10sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_rs"
            android:textColor="#243C60"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>