<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".info.InfoData">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/deep_navy"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey"
            app:navigationIcon="@drawable/ic_arrow">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jml"
            android:textSize="10sp"
            android:textColor="#767676"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ts"
            android:textSize="10sp"
            android:textColor="#767676"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kep"
            android:textSize="10sp"
            android:textColor="#767676"
            android:padding="5dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/color_border">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgblue">

                <TextView
                    android:layout_width="100dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/kc"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:padding="10dp"
                    android:text="@string/faskes"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="89dp"
                    android:layout_column="1"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:padding="5dp"
                    android:text="Jml
                    Kasus TBC"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_column="1"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:padding="10dp"
                    android:text="@string/rumahts"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_column="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/kp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </TableRow>

            <FrameLayout
                android:id="@+id/fragment_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </FrameLayout>

        </TableLayout>

    </FrameLayout>

</LinearLayout>