<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeaa4"
    android:orientation="vertical"
    tools:context=".info.InfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            app:navigationIcon="@drawable/ic_arrow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/infotbc"
                android:textSize="18sp"
                android:textColor="#243C60" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:src="@drawable/ilustrasi_admin" />

    <LinearLayout
        android:layout_width="440dp"
        android:layout_height="630dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-60dp"
        android:background="@drawable/cvbg"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:contextClickable="true"
            android:onClick="infoPengenalan"
            app:cardBackgroundColor="#B0E5F6"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/icon_info1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/pu"
                android:textColor="#132743"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="45dp"
                android:text="@string/pu_deskripsi"
                android:textColor="#132743"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:contextClickable="true"
            android:onClick="infoGejala"
            app:cardBackgroundColor="#B0F5F1"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/icon_info2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/gejala"
                android:textColor="#132743"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="45dp"
                android:text="@string/gj_deskripsi"
                android:textColor="#132743"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:contextClickable="true"
            android:onClick="infoPengobatan"
            app:cardBackgroundColor="#FBE8C0"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/icon_info3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/info_pb"
                android:textColor="#132743"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="45dp"
                android:text="@string/pb_deskripsi"
                android:textColor="#132743"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:contextClickable="true"
            android:onClick="infoPencegahan"
            app:cardBackgroundColor="#F4B1BE"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/icon_info4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:text="@string/info_pc"
                android:textColor="#132743"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="40dp"
                android:text="@string/pc_deskripsi"
                android:textColor="#132743"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contextClickable="true"
            android:onClick="infoData"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            app:cardBackgroundColor="#B0F5F1"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/icon_info5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_data"
                android:textColor="#132743"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/data_deskripsi"
                android:textColor="#132743"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>